# neuROSym

./: .gitignore  README.md
darko_messages/darko_perception_msgs/: CMakeLists.txt
darko_messages/darko_perception_msgs/msg/: Human.msg  Humans.msg  HumansTrajs.msg
data_processing/bag_processing_bringup/: CMakeLists.txt  package.xml
data_processing/bag_processing_bringup/info/: peopleID.json
data_processing/bag_processing_bringup/launch/: extract_Agent.launch
data_processing/bag_processing_bringup/scripts/: extract_Agent.py
data_processing/rviz_visualisation/: CMakeLists.txt  package.xml
data_processing/trajectory_plot/: trajPlot.py
motion_predict/motion_predict_bringup/: CMakeLists.txt  package.xml
motion_predict/motion_predict_bringup/info/: models.json
motion_predict/motion_predict_bringup/launch/: motion_predict.launch
motion_predict/neurosym_sgan/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
motion_predict/neurosym_sgan/scripts/: inference_model_informed_nofilter_integration.py  inference_model_informed_velodyne_nofilter.py  inference_model_informed_velodyne_pedfiltered.py  inference_model_informed_velodyne_pedfiltered_offline.py  inference_model_velodyne_nofilter.py  inference_model_velodyne_pedfiltered.py  plot_inference.py  plot_inference_integration.py  plot_inference_offline.py  run_traj.sh  setup.py
motion_predict/neurosym_sgan/scripts/sgan/: losses_informed.py  models.py  models_informed.py  test.py
motion_predict/neurosym_sgan/scripts/sgan/data/: cnd.py  cnd_labels.txt  loader.py  loader_informed.py  qtc.py  trajectories.py  trajectories_informed.py
