<?xml version="1.0"?>
<package>
  <name>motion_predict_bringup</name>
  <version>0.0.0</version>
  <description>motion prediction bringup node</description>
  <maintainer email="sariahmghames@gmail.com">Sariah Mghames</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
